--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -178,7 +178,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_page_down">До сторінки нижче (Page Down)</string>
     <string name="move_text_one_line_up">Перемістити текст на один рядок вище</string>
     <string name="move_text_one_line_down">Перемістити текст на один рядок нижче</string>
-    <string name="start_new_line_below">Запускати новий рядок нижче</string>
+    <string name="start_new_line_below">Почати новий рядок нижче</string>
     <string name="key_pos_1">До початку рядка (Home)</string>
     <string name="key_pos_end">В кінець рядка (End)</string>
     <string name="key_pos_1_document">Початок документа</string>
