--- a/app/src/main/res/values-sc/strings.xml
+++ b/app/src/main/res/values-sc/strings.xml
@@ -178,6 +178,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_page_down">Pàgina in suta (Page Down)</string>
     <string name="move_text_one_line_up">Tràmuda su testu de una riga cara a susu</string>
     <string name="move_text_one_line_down">Tràmuda su testu de una riga cara a giosso</string>
+    <string name="start_new_line_below">Incumintza cun una lìnia noa in suta</string>
     <string name="key_pos_1">Incumintzu de sa lìnia (tecla Home)</string>
     <string name="key_pos_end">Fine de sa lìnia (tecla End)</string>
     <string name="key_pos_1_document">Incumintzu de su documentu</string>
