--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -404,4 +404,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="text_to_replace">Text to replace</string>
     <string name="text_to_search">Text to search</string>
     <string name="search_and_replace">Search and Replace</string>
+    <string name="search_replace_pattern_error_message">Search or replace pattern error.</string>
+    <string name="search_replace_count_message">Found %d matches</string>
+    <string name="replace">Search / Replace</string>
 </resources>
