Switching to a class based approach

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -403,9 +403,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="use_regex">Use Regex</string>
     <string name="text_to_replace">Replace with</string>
     <string name="text_to_search">Search for</string>
-    <string name="recent_text_to_replace_label">Replace with: %s</string>
-    <string name="recent_text_to_search_label">Search for: %s</string>
-    <string name="recent_is_regex_label">Regex: %b</string>
+    <string name="search_replace_recent_strings">Search pattern: %s, Replace plattern: %s</string>
+    <string name="search_replace_recent_options">Use regex: %b, Multiline regex: %b</string>
     <string name="search_and_replace">Search / Replace</string>
     <string name="search_replace_pattern_error_message">Search or replace pattern error.</string>
     <string name="search_replace_count_message">Found %d matches</string>
