--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -199,6 +199,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="start_on_bottom_when_loading_document">Upon loading a document, position cursor at its end</string>
     <string name="unordered_list_character">Unordered list character</string>
     <string name="character_to_start_items_of_unordered_list_with">Which character to use to denote unordered lists</string>
+    <string name="set_cursor_position_title">Set cursor position</string>
+    <string name="set_cursor_position">Which position to use when open editor</string>
+    <string name="cursor_start">Start of document</string>
+    <string name="cursor_end">End of document</string>
+    <string name="cursor_last">Last position in document</string>
     <string name="unordered_list_char_dash">Dash (-)</string>
     <string name="unordered_list_char_asterisk">Asterisk (*)</string>
     <string name="unordered_list_char_plus">Plus (+)</string>
