--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -382,4 +382,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="file_description_format">Formato de descripción de archivo</string>
     <string name="file_description_format_dialog">Formato para la descripción bajo cada archivo en el navegador de archivos. Sigue las reglas de SimpleDateFormat, con la adición de FS para mostrar el tamaño del archivo. Deje en blanco para usar el formato predeterminado para su locale.\n\nEjemplo de entrada:\nFS yyyy MMM dd hh:mm:ss aa\nFormato de salida:\n30KB 2020 Mar 20 11:24:52 PM</string>
     <string name="loading_default_value">Cargando valor por defecto</string>
+    <string name="search_and_replace">Buscar / Reemplazar</string>
+    <string name="search_for">Buscar por</string>
+    <string name="replace_with">Reemplazar con</string>
+    <string name="replace_first">Reemplazar primero</string>
+    <string name="replace_all">Reemplazar todo</string>
+    <string name="matches">Partidas</string>
+    <string name="search_replace_pattern_error_message">Error de búsqueda o reemplazo.</string>
 </resources>
