--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -388,5 +388,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="replace_first">最初に置換</string>
     <string name="replace_all">すべて置換</string>
     <string name="matches">一致</string>
-    <string name="search_replace_pattern_error_message">検索または置き換えパターンエラー。</string>
+    <string name="search_replace_pattern_error_message">検索または置換パターンエラー。</string>
 </resources>
