--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -385,7 +385,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="search_and_replace">Søg / Erstat</string>
     <string name="search_for">Søg efter</string>
     <string name="replace_with">Erstat med</string>
-    <string name="replace_first">Erstat først</string>
+    <string name="replace_once">Erstat én gang</string>
     <string name="replace_all">Erstat alle</string>
     <string name="matches">Kampe</string>
     <string name="search_replace_pattern_error_message">Søg eller erstat mønsterfejl.</string>
